[package]
name = "rcommander"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
#opt-level = 3
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.3"
getopts = "0.2"
serde = {version = "1.0.124", features = ["derive"]}
serde_json = "1.0.64"
dirs = "4.0.0"